syntax = "proto3";
package utility;

option go_package = "github.com/pokt-network/pocket/utility/types";

message TransactionGossipMessage {
  bytes tx = 1;
}